# DX12Renderer

./: .gitignore  README.md
DX12Renderer/: CMakeLists.txt
DX12Renderer/DX12Lib/: CMakeLists.txt
DX12Renderer/DX12Lib/src/Application/: Application.cpp  Application.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  Events.h  HighResClock.cpp  KeyCodes.h  RootSignature.cpp  RootSignature.h  Singleton.h  UploadBuffer.cpp  UploadBuffer.h  Window.cpp  Window.h
DX12Renderer/DX12Lib/src/Application/Buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
DX12Renderer/DX12Lib/src/Application/DataTypes/: Mesh.cpp  Mesh.h  Structs.h
DX12Renderer/DX12Lib/src/Application/DescriptorAllocator/: DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorPage.cpp  DescriptorAllocatorPage.h
DX12Renderer/DX12Lib/src/Application/Resources/: Resource.cpp  Resource.h  ResourceStateTracker.cpp  ResourceStateTracker.h
DX12Renderer/DX12Lib/src/Games/: TestGame1.h
DX12Renderer/DX12Lib/src/Helpers/: DirectXHelpers.h  Helpers.h
DX12Renderer/DX12Lib/src/Includes/: DXRHelpersIncludes.h  DirectXIncludes.h  GlmIncludes.h
DX12Renderer/Project/: CMakeLists.txt  main.cpp
DX12Renderer/RayTracer/: CMakeLists.txt  RayTracingScene.cpp  RayTracingScene.h  main.cpp
DX12Renderer/Resources/: CMakeLists.txt
DX12Renderer/Resources/DirectX/: CMakeLists.txt
DX12Renderer/Resources/GLFW/: CMakeLists.txt
DX12Renderer/Resources/Glm/: CMakeLists.txt
DX12Renderer/Resources/Shaders/: Default_VS.hlsl  Hit_CHS.hlsl  Miss_MSS.hlsl  PixelShader.hlsl  RayGen_RGS.hlsl  VertexShader.hlsl
DX12Renderer/Tutorial2/: CMakeLists.txt  Tutorial2.cpp  Tutorial2.h  main.cpp
DX12Renderer/Tutorial3/: CMakeLists.txt  Tutorial3.cpp  Tutorial3.h  main.cpp
DX12Renderer/src/: Application.cpp  Application.h  CMakeLists.txt  CommandQueue.cpp  FenceObject.cpp  FenceObject.h  Game.cpp  Game.h  Singleton.h  Window.cpp  Window.h  main.cpp
DX12Renderer/src/Application/: Application.cpp  Application.h  CommandQueue.cpp  Game.h  HighResClock.h  KeyCodes.h  UploadBuffer.cpp  UploadBuffer.h  Window.cpp  Window.h
DX12Renderer/src/Games/: Game.cpp  Game.h  TestGame1.cpp  TestGame1.h  Tutorial2.cpp  Tutorial2.h
DX12Renderer/src/Helpers/: DirectXHelpers.h  Helpers.h
DX12Renderer/src/Includes/: DirectXIncludes.h
